tests/NormalTests/paczka1/fuzzy1/54221279.err
Error in line 1: ndkohUns5 S409 60,7
Error in line 2: ndkohUns5 A155 61,9
Error in line 4: A5R0g8SVkhn S409 0,8
Error in line 3: wii A188 12,9
Error in line 12: ZsDyFT A155 -1,0
Error in line 10: A5R0g8SVkhn A155 86,3
Error in line 8: ndkohUns5 A188 89,6
Error in line 14: A896 S409 554,9
Error in line 16: ndkohUns5 S409 70,2
Error in line 30: ndkohUns5 A188 89,3
